gac_sb/objects/Historique_Segmentation__c.object
<CustomObject>
    <fields>
        <fullName>CIR_Dernier_CIR__c</fullName>
        <inlineHelpText>Renseignez la valeur en k€</inlineHelpText>
        <label>Dernier CIR (k€)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIR_Effectif_RD__c</fullName>
        <label>Effectif R&amp;D</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIR_Enjeux_opportunite__c</fullName>
        <inlineHelpText>Champ obligatoire pour effectuer la demande d&apos;approbation.</inlineHelpText>
        <label>CIR Enjeux Compte</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enjeux insuffisants</fullName>
                </value>
                <value>
                    <fullName>ECO</fullName>
                </value>
                <value>
                    <fullName>PREMIUM</fullName>
                </value>
                <value>
                    <fullName>STAR</fullName>
                </value>
                <value>
                    <fullName>Grand compte</fullName>
                </value>
                <value>
                    <fullName>Inéligible</fullName>
                </value>
                <value>
                    <fullName>Non communiqué</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIR_Potentiel_primo__c</fullName>
        <label>Potentiel primo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
                <value>
                    <fullName>NSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code_postal_du_compte__c</fullName>
        <formula>Compte__r.BillingPostalCode</formula>
        <label>Code postal du compte</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compte__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Compte</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Historiques segmentation</relationshipLabel>
        <relationshipName>Histos_segmentation</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DI_Annees_concernees_concurrent__c</fullName>
        <inlineHelpText>Indiquez les années concernées par le contrat du concurrent en place si vous avez l&apos;information</inlineHelpText>
        <label>DI Années concernées concurrent_OLD_V2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DI_Concurrent__c</fullName>
        <inlineHelpText>Indiquez le concurrent en place chez le prospect, utilisez le choix &quot;Autres&quot; si le concurrent n&apos;apparait pas dans la liste, utilisez le choix &quot;Inconnu&quot; si vous n&apos;avez pas l&apos;information</inlineHelpText>
        <label>DI Gestion du dossier_OLD_V2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concurrent non communiqué</fullName>
                </value>
                <value>
                    <fullName>Interne</fullName>
                </value>
                <value>
                    <fullName>GAC</fullName>
                </value>
                <value>
                    <fullName>Actemis</fullName>
                </value>
                <value>
                    <fullName>Adocis</fullName>
                </value>
                <value>
                    <fullName>Crofthawk</fullName>
                </value>
                <value>
                    <fullName>Sogedev</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DI_autre_concurrent__c</fullName>
        <label>DI Autre concurrent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_delivrance_permis_de_construire__c</fullName>
        <label>Date délivrance permis de construire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departement__c</fullName>
        <formula>Compte__r.Departement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Département</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directeur_commercial__c</fullName>
        <label>Directeur commercial_OLD_V2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effectif_export__c</fullName>
        <label>Effectif export</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effectif_societe__c</fullName>
        <formula>Compte__r.Effectif_France__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effectif société</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ev_nement_juridique__c</fullName>
        <label>IL Motif</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TUP &lt; 2010</fullName>
                </value>
                <value>
                    <fullName>Fusion &lt; 2010</fullName>
                </value>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Cession</fullName>
                </value>
                <value>
                    <fullName>Scission</fullName>
                </value>
                <value>
                    <fullName>Aucun évènement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existence_de_clients__c</fullName>
        <label>Existence de clients_OLD_V2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afrique du Sud</fullName>
                </value>
                <value>
                    <fullName>Albanie</fullName>
                </value>
                <value>
                    <fullName>Algérie</fullName>
                </value>
                <value>
                    <fullName>Allemagne</fullName>
                </value>
                <value>
                    <fullName>Andorre</fullName>
                </value>
                <value>
                    <fullName>Arabie saoudite</fullName>
                </value>
                <value>
                    <fullName>Argentine</fullName>
                </value>
                <value>
                    <fullName>Arménie</fullName>
                </value>
                <value>
                    <fullName>Australie</fullName>
                </value>
                <value>
                    <fullName>Autriche</fullName>
                </value>
                <value>
                    <fullName>Azerbaïdjan</fullName>
                </value>
                <value>
                    <fullName>Bahreïn</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Bélarus</fullName>
                </value>
                <value>
                    <fullName>Belgique</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Bénin</fullName>
                </value>
                <value>
                    <fullName>Bolivie</fullName>
                </value>
                <value>
                    <fullName>Bosnie-Herzégovine</fullName>
                </value>
                <value>
                    <fullName>Brésil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgarie</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cambodge</fullName>
                </value>
                <value>
                    <fullName>Cameroun</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chili</fullName>
                </value>
                <value>
                    <fullName>Chine</fullName>
                </value>
                <value>
                    <fullName>Chypre</fullName>
                </value>
                <value>
                    <fullName>Colombie</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FI_Annees_concernees_concurrent__c</fullName>
        <inlineHelpText>Indiquez les années concernées par le contrat du concurrent en place si vous avez l&apos;information</inlineHelpText>
        <label>AS Années concernées concurrent</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FI_Autre_Concurrent__c</fullName>
        <label>AS Autre concurrent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FI_Concurrent__c</fullName>
        <inlineHelpText>Indiquez le concurrent en place chez le prospect, utilisez le choix &quot;Autres&quot; si le concurrent n&apos;apparait pas dans la liste, utilisez le choix &quot;Inconnu&quot; si vous n&apos;avez pas l&apos;information</inlineHelpText>
        <label>AS Gestion du dossier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non concerné</fullName>
                </value>
                <value>
                    <fullName>Concurrent non communiqué</fullName>
                </value>
                <value>
                    <fullName>Interne</fullName>
                </value>
                <value>
                    <fullName>GAC</fullName>
                </value>
                <value>
                    <fullName>Absiskey</fullName>
                </value>
                <value>
                    <fullName>Acies</fullName>
                </value>
                <value>
                    <fullName>Actemis</fullName>
                </value>
                <value>
                    <fullName>Adocis</fullName>
                </value>
                <value>
                    <fullName>Ayming (ex Alma et Lowendal)</fullName>
                </value>
                <value>
                    <fullName>Cabinet régional</fullName>
                </value>
                <value>
                    <fullName>Capital High Tech</fullName>
                </value>
                <value>
                    <fullName>Crofthawk</fullName>
                </value>
                <value>
                    <fullName>Efficient Innovation</fullName>
                </value>
                <value>
                    <fullName>Effigroup Bloomon (ex Effinov)</fullName>
                </value>
                <value>
                    <fullName>Ernst &amp; Young</fullName>
                </value>
                <value>
                    <fullName>Eurinnov</fullName>
                </value>
                <value>
                    <fullName>Expert comptable</fullName>
                </value>
                <value>
                    <fullName>F.Iniciativas</fullName>
                </value>
                <value>
                    <fullName>Fidal</fullName>
                </value>
                <value>
                    <fullName>Fineco</fullName>
                </value>
                <value>
                    <fullName>Grant Thornton</fullName>
                </value>
                <value>
                    <fullName>Hexalliance</fullName>
                </value>
                <value>
                    <fullName>IFEM</fullName>
                </value>
                <value>
                    <fullName>Ilceos</fullName>
                </value>
                <value>
                    <fullName>Inventage (ex GSM Subventium)</fullName>
                </value>
                <value>
                    <fullName>KPMG</fullName>
                </value>
                <value>
                    <fullName>Kurt Salmon</fullName>
                </value>
                <value>
                    <fullName>Leyton</fullName>
                </value>
                <value>
                    <fullName>Lowendal Masai</fullName>
                </value>
                <value>
                    <fullName>Sogedev</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FI_Decisionnaire__c</fullName>
        <label>Décisionnaire AS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FI_Enjeux_opportunite__c</fullName>
        <inlineHelpText>Champ obligatoire pour effectuer la demande d&apos;approbation.</inlineHelpText>
        <label>AS Enjeux Compte</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ECO</fullName>
                </value>
                <value>
                    <fullName>PREMIUM</fullName>
                </value>
                <value>
                    <fullName>STAR</fullName>
                </value>
                <value>
                    <fullName>Grand compte</fullName>
                </value>
                <value>
                    <fullName>Non communiqué</fullName>
                </value>
                <value>
                    <fullName>Enjeux insuffisants</fullName>
                </value>
                <value>
                    <fullName>Inéligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FI_Type_d_aide_envisagee__c</fullName>
        <inlineHelpText>Renseignez ici le type d&apos;aide envisagé pour cette mission</inlineHelpText>
        <label>AS Type d&apos;aide envisagée</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aide nationale</fullName>
                </value>
                <value>
                    <fullName>Aide régionale</fullName>
                </value>
                <value>
                    <fullName>Aide européenne</fullName>
                </value>
                <value>
                    <fullName>Aide bilatérale</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_du_compte__c</fullName>
        <formula>Compte__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID du compte</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IL_Annees_concernees_concurrent__c</fullName>
        <inlineHelpText>Indiquez les années concernées par le contrat du concurrent en place si vous avez l&apos;information</inlineHelpText>
        <label>IL Années concernées concurrent</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IL_Autre_Concurrent__c</fullName>
        <label>IL Autre concurrent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IL_Concurrent__c</fullName>
        <inlineHelpText>Indiquez le concurrent en place chez le prospect, utilisez le choix &quot;Autres&quot; si le concurrent n&apos;apparait pas dans la liste, utilisez le choix &quot;Inconnu&quot; si vous n&apos;avez pas l&apos;information</inlineHelpText>
        <label>IL Gestion du dossier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non concerné</fullName>
                </value>
                <value>
                    <fullName>Concurrent non communiqué</fullName>
                </value>
                <value>
                    <fullName>Interne</fullName>
                </value>
                <value>
                    <fullName>GAC</fullName>
                </value>
                <value>
                    <fullName>Adocis</fullName>
                </value>
                <value>
                    <fullName>Ayming (ex Alma et Lowendal)</fullName>
                </value>
                <value>
                    <fullName>Altax</fullName>
                </value>
                <value>
                    <fullName>Cefi action</fullName>
                </value>
                <value>
                    <fullName>CMS - Francis Lefebvre</fullName>
                </value>
                <value>
                    <fullName>DL Developpement</fullName>
                </value>
                <value>
                    <fullName>EIF</fullName>
                </value>
                <value>
                    <fullName>Ernst &amp; Young</fullName>
                </value>
                <value>
                    <fullName>Fidal</fullName>
                </value>
                <value>
                    <fullName>Grant Thornton</fullName>
                </value>
                <value>
                    <fullName>InovexConseils</fullName>
                </value>
                <value>
                    <fullName>Inventage (ex GSM Subventium)</fullName>
                </value>
                <value>
                    <fullName>Leyton</fullName>
                </value>
                <value>
                    <fullName>Lowendal Masai</fullName>
                </value>
                <value>
                    <fullName>Marianne experts</fullName>
                </value>
                <value>
                    <fullName>TAJ</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IL_Credit_bail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Crédit bail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IL_Decisionnaire__c</fullName>
        <label>Décisionnaire IL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IL_Dernier_controle_fiscal__c</fullName>
        <inlineHelpText>Renseignez ici la date du dernier contrôle fiscal</inlineHelpText>
        <label>Dernier contrôle fiscal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inconnu</fullName>
                    <default>true</default>
                    <label>Inconnu</label>
                </value>
                <value>
                    <fullName>+ de 3 ans</fullName>
                </value>
                <value>
                    <fullName>- de 3 ans</fullName>
                </value>
                <value>
                    <fullName>En cours</fullName>
                </value>
                <value>
                    <fullName>Aucun</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IL_Enjeux_opportunite__c</fullName>
        <inlineHelpText>Champ obligatoire pour effectuer la demande d&apos;approbation.</inlineHelpText>
        <label>IL Enjeux Compte</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ECO</fullName>
                </value>
                <value>
                    <fullName>PREMIUM</fullName>
                </value>
                <value>
                    <fullName>STAR</fullName>
                </value>
                <value>
                    <fullName>Grand compte</fullName>
                </value>
                <value>
                    <fullName>Non communiqué</fullName>
                </value>
                <value>
                    <fullName>Enjeux insuffisants</fullName>
                </value>
                <value>
                    <fullName>Inéligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IL_Typologie_site__c</fullName>
        <label>Typologie site</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Industriel</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IL_commentaires__c</fullName>
        <description>Commentaires IL</description>
        <label>IL Commentaires</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IL_montant_CET_plafone__c</fullName>
        <label>Montant CET plafonné</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IL_nb_sites_commerce__c</fullName>
        <label>Nombre de sites commerciaux</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IL_nb_sites_indus__c</fullName>
        <label>Nombre de sites industriels</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IL_nb_sites_tf_100k__c</fullName>
        <label>Nombre de sites avec TF &gt; 150 K€</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IL_role_sup__c</fullName>
        <label>Rôle supplémentaire</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non</fullName>
                </value>
                <value>
                    <fullName>Oui</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IL_surface_estimee__c</fullName>
        <label>Surface estimée (m²)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id_Externe__c</fullName>
        <externalId>true</externalId>
        <label>Id Externe</label>
        <length>27</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Implantations_locales__c</fullName>
        <label>Implantations locales_OLD_V2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afrique du Sud</fullName>
                </value>
                <value>
                    <fullName>Albanie</fullName>
                </value>
                <value>
                    <fullName>Algérie</fullName>
                </value>
                <value>
                    <fullName>Allemagne</fullName>
                </value>
                <value>
                    <fullName>Andorre</fullName>
                </value>
                <value>
                    <fullName>Arabie saoudite</fullName>
                </value>
                <value>
                    <fullName>Argentine</fullName>
                </value>
                <value>
                    <fullName>Arménie</fullName>
                </value>
                <value>
                    <fullName>Australie</fullName>
                </value>
                <value>
                    <fullName>Autriche</fullName>
                </value>
                <value>
                    <fullName>Azerbaïdjan</fullName>
                </value>
                <value>
                    <fullName>Bahreïn</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Bélarus</fullName>
                </value>
                <value>
                    <fullName>Belgique</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Bénin</fullName>
                </value>
                <value>
                    <fullName>Bolivie</fullName>
                </value>
                <value>
                    <fullName>Bosnie-Herzégovine</fullName>
                </value>
                <value>
                    <fullName>Brésil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgarie</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cambodge</fullName>
                </value>
                <value>
                    <fullName>Cameroun</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chili</fullName>
                </value>
                <value>
                    <fullName>Chine</fullName>
                </value>
                <value>
                    <fullName>Chypre</fullName>
                </value>
                <value>
                    <fullName>Colombie</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>